# jkit

./: .gitignore  CMakeLists.txt  README.md
Docs/Reference/: Doxyfile
JKit/: CMakeLists.txt
JKit/Core/: Application.cpp  Application.hpp  Array.hpp  ByteBuffer.hpp  Dir.hpp  Exception.cpp  Exception.hpp  File.hpp  FileStream.cpp  FileStream.hpp  FileSystem.cpp  FileSystem.hpp  LocalFile.hpp  MainLoop.cpp  MainLoop.hpp  Map.hpp  MemoryStream.cpp  MemoryStream.hpp  Object.cpp  Object.hpp  ObjectProperty.cpp  ObjectProperty.hpp  Platform.hpp  StandardStream.hpp  Stream.cpp  Stream.hpp  String.cpp  String.hpp
JKit/Core/Detail/Posix/: Exception.cpp  FileStream.cpp  FileStream.hpp  LocalFile.cpp
JKit/Core/Detail/Windows/: Exception.cpp  File.cpp  File.hpp  FileStream.cpp  FileStream.hpp  LocalFile.cpp  Utils.cpp  Utils.hpp
JKit/Core/Linux/: Dir.cpp  Dir.hpp  StandardStream.cpp  Timer.cpp  Timer.hpp
JKit/Core/Windows/: Dir.cpp  Dir.hpp  Timer.cpp  Timer.hpp
JKit/HRDF/: Json.cpp  Json.hpp  Lexer.cpp  Lexer.hpp
Tests/: CMakeLists.txt  CustomObject.cpp  File.cpp  Json.cpp  StandardStream.cpp  test-file
